--- a/index.html
+++ b/index.html
@@ -60,28 +60,162 @@
            </p>
         </div>
         <div class="right-section col-12 col-sm-6 col-lg-6 col-md-6">
+            
            <img src="./assets/images/5469.png" alt="">
         </div>
     </div>
-    <div>
-        <div class="row">
-            <div>\
-                urvived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-Why do we use it?
-It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-
-
-Where does it come from?
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+    <!-- landing secssion end-->
+    <span class="doted">
+    <img src="./assets/Screenshot_2.png" class="doted-img " alt=""></span>
+    <!-- secound secssion start-->
+    <div >
+        <div class="row second">
+            <div class="left-us-secssion   "> 
+               <img src="./assets/images/2.png" alt="">
+            </div>
+            <div class="right-us-secssion    ">
+                <h4>About us</h4>
+                <h2 >Who We Are</h2>
+                <p class="p-first">
+                    AS you can see. we're a digital agency. But not <br>
+                     just any other agency.At Elix Technology. <br>
+                      we'vegathered some of the top
+                </p>
+                <p class="p-sec">
+                    But not just any other agency . At Elix Technology . <br>
+                     we've gathered some of the top marketing minds <br>
+                    under one roof. Our purpose? Serving people of <br>
+                     New jersey.
+                </p>
+                <p>
+                    <u><a href="#">Explore us  &nbsp; <img src="./assets/svg/right-arrow.svg" height="20px" width="20px" alt=""></a></u>
+                </p>
             </div>
         </div>
     </div>
 </div>
+<!-- secound section end-->
+<!-- third section start-->
+<div>
+    <div>
+        <div class="third">
+            <div class="row">
+                <div class="card col-sm-4 col-12" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/we-des.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5>WEB DESING</h5>
+                      <p class="card-text">
+                          We develop distinctive websites that'll leave <br>
+                          the users with the optimal digital
+                      </p>
+                    </div>
+                  </div>
+                  <div class="card col-sm-4 col-12" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/web-dev.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5>WEB DEVELOPMENT</h5>
+                      <p class="card-text">
+                          We develop distinctive websites that'll leave <br>
+                          the users with the optimal experience
+                      </p>
+                    </div>
+                  </div>
+                  <div class="card col-sm-4 col-12" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/branding.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5>BRANDING</h5>
+                      <p class="card-text">
+                          We can assist you to be unique, to be <br>
+                          conspicuous , and to be prominent.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="card col-sm-4 col-12" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/seo.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5>SEO</h5>
+                      <p class="card-text"> We develop distinctive websites that'll leave <br>
+                        the users with the optimal digital</p>
+                    </div>
+                  </div>
+                  <div class="card col-sm-4 col-12" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/ux-ui.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5>UX / UI Design</h5>
+                      <p class="card-text"> We develop distinctive websites that'll leave <br>
+                        the users with the optimal digital</p>
+                    </div>
+                  </div>
+                  <div class="card col-sm-4 col-12" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/condent.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5>Content Writing</h5>
+                      <p >
+                          This content can include sales copy ,
+                          <br>
+                          e-book,podcast,and text for graphics
+                      </p>
+                    </div>
+                  </div>
+            </div>
+            
 
-<!-- landing secssion end-->
+        </div>
+    </div>
+</div>
+<!-- third section end-->
+<!--fourth section start-->
+<div>
+    <div>
+        <div class="forth">
+            <div class="row top-section">
+                <div class="top-section-1">
+                    <img src="./assets/4.0.png" alt="">
+                </div>
+                <div class="top-section-2">
+                    <div>
+                        <h4>How We Are</h4>
+                        <h2>DIFFERENT</h2>
+                        <P>
+                            We strive to help you to grow your business into what you've always longed for. <br>
+                            To promote your brand and elevate your products right in front of your <br>
+                            customer's eyes. Our formula to accomplish this is pretty simple.
+                        </P>
+                    </div>
+                </div>
+                <div class="top-section-3">
+                    <img src="./assets/4.png" alt="">
+
+                </div>
+            </div>
+            <div class="row bottom-section">
+                <div class="bottom-section-1">
+                    <div class="text">
+                        <div class="text1">
+                            <h6>Projects</h6>
+                            <h4>121</h4>
+                        </div>
+                        <div class="text2">
+                            <h6>Clients</h6>
+                            <h4>2019</h4>
+                        </div>
+                        <div class="text3">
+                            <h6>Country</h6>
+                            <h4>017</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom-section-2">
+                    <img src="./assets/images/31.png" alt="">
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+<!--fourth section end-->
+
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
